--- a/public/assets/scss/components/_section-title.scss
+++ b/public/assets/scss/components/_section-title.scss
@@ -8,17 +8,17 @@
 .tp-hero{
     &-title{
         font-weight: 700;
-        font-size: 220px;
-        line-height: .9;
+        font-size: 170px;
+        line-height: 1;
         margin-bottom: 0;
         letter-spacing: -0.08em;
         text-transform: uppercase;
         color: var(--tp-common-white);
         @media #{$x3l}{
-            font-size: 180px;
+            font-size: 160px;
         }
         @media #{$xxl}{
-            font-size: 160px;
+            font-size: 140px;
         }
         @media #{$xl}{
             font-size: 120px;
